Написаны интеграционные тесты Добавлена валидация DTO классов Подключен Swagger и добавлена корректное описание методов в нем

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
       file: db/changelog/202408181158-create-tasks.xml
   - include:
       file: db/changelog/202408181210-create-comments.xml
+  - include:
+      file: db/changelog/202408181210-create-test-user.xml
+
